--- a/lib/yetzirah/index.styl
+++ b/lib/yetzirah/index.styl
@@ -1,9 +1,11 @@
-@import normalize
-@import clearfix
-@import inline-lists
+@import reset
 @import 'font-stacks/serif'
 @import 'font-stacks/sans-serif'
 @import 'font-stacks/monospace'
 @import 'font-stacks/cursive'
-@import base
+@import clearfix
+@import typography
+// @import forms
+@import inline-lists
+// @import base
 @import grid
