--- a/test/index.jade
+++ b/test/index.jade
@@ -1,14 +1,19 @@
 html
   head
+    meta(
+      name='viewport'
+      content='width=device-width, initial-scale=1'
+    )
     title Yetzirah CSS Foundation Library
     link(rel='stylesheet' media='screen' href='css/app.css')
   body
     header
-      h1: a(href='./index.html') Yetzirah CSS
+      h1: a(href='./index.html') Yetzirah CSS Foundation Library
       p.
         A simple, lightweight, and responsive CSS library that prefers
-        semantics over classitis. Built with love and pride. Uses Stylus
-        for pre-processing.
+        semantics over <i>classitis</i>.
+      p.
+        Built with love and pride. Uses Stylus for pre-processing.
     nav
       ul
         li: a(href='#base') Base styles
