--- a/lib/yetzirah/clearfix.styl
+++ b/lib/yetzirah/clearfix.styl
@@ -1,13 +1,8 @@
-// Based off of Nicolas Gallagher's article and solution found at:
-// http://nicolasgallagher.com/micro-clearfix-hack/
-
 clearfix()
-  zoom: 1
-
+  zoom 1
   &:before
   &:after
-    content: ""
-    display: table
-
+    content ""
+    display table
   &:after
-    clear: both
+    clear both
