--- a/test/font-stacks.jade
+++ b/test/font-stacks.jade
@@ -1,165 +1,84 @@
 h2#font-stacks Font stacks
 h3 Cursive
-.sandbox
-  p.cursive.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.cursive= bogan({ paragraphs: 1 })
 h3 Monospace
-.sandbox
-  p.monospace.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.monospace= bogan({ paragraphs: 1 })
 h3 Sans-serif
 h4 Optima
-.sandbox
-  p.optima.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.optima= bogan({ paragraphs: 1 })
 h4 Futura
-.sandbox
-  p.futura.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.futura= bogan({ paragraphs: 1 })
 h4 Gill sans
-.sandbox
-  p.gill-sans.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.gill-sans= bogan({ paragraphs: 1 })
 h4 Trebuchet
-.sandbox
-  p.trebuchet.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.trebuchet= bogan({ paragraphs: 1 })
 h4 Helvetica
-.sandbox
-  p.helvetica.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.helvetica= bogan({ paragraphs: 1 })
 h4 Verdana
-.sandbox
-  p.verdana.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.verdana= bogan({ paragraphs: 1 })
 h4 Lucida grande
-.sandbox
-  p.lucida-grande.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.lucida-grande= bogan({ paragraphs: 1 })
 h4 Geneva
-.sandbox
-  p.geneva.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.geneva= bogan({ paragraphs: 1 })
 h4 Segoe
-.sandbox
-  p.segoe.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.segoe= bogan({ paragraphs: 1 })
 h4 Candara
-.sandbox
-  p.candara.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.candara= bogan({ paragraphs: 1 })
 h4 Calibri
-.sandbox
-  p.calibri.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.calibri= bogan({ paragraphs: 1 })
 h4 Franklin gothic
-.sandbox
-  p.franklin-gothic.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.franklin-gothic= bogan({ paragraphs: 1 })
 h4 Tahoma
-.sandbox
-  p.tahoma.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.tahoma= bogan({ paragraphs: 1 })
 h3 Serif
 h4 Garamond
-.sandbox
-  p.garamond.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.garamond= bogan({ paragraphs: 1 })
 h4 Lucida bright
-.sandbox
-  p.lucida-bright.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.lucida-bright= bogan({ paragraphs: 1 })
 h4 Palatino
-.sandbox
-  p.palatino.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.palatino= bogan({ paragraphs: 1 })
 h4 Big caslon
-.sandbox
-  p.big-caslon.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.big-caslon= bogan({ paragraphs: 1 })
 h4 Didot
-.sandbox
-  p.didot.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.didot= bogan({ paragraphs: 1 })
 h4 Baskerville
-.sandbox
-  p.baskerville.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.baskerville= bogan({ paragraphs: 1 })
 h4 Hoefler text
-.sandbox
-  p.hoefler-text.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.hoefler-text= bogan({ paragraphs: 1 })
 h4 Bodoni MT
-.sandbox
-  p.bodoni-mt.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.bodoni-mt= bogan({ paragraphs: 1 })
 h4 Goudy old style
-.sandbox
-  p.goudy-old-style.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.goudy-old-style= bogan({ paragraphs: 1 })
 h4 Constantia
-.sandbox
-  p.constantia.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.constantia= bogan({ paragraphs: 1 })
 h4 Cambria
-.sandbox
-  p.cambria.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.cambria= bogan({ paragraphs: 1 })
 h4 Book antiqua
-.sandbox
-  p.book-antiqua.
-    Cras blandit rutrum tortor. Fusce sem nisl, fermentum eget turpis eu,
-    sollicitudin elementum neque. Cras elit lectus, pharetra a felis id, scelerisque
-    posuere purus.
+.demo
+  p.book-antiqua= bogan({ paragraphs: 1 })
