--- a/test/grids.jade
+++ b/test/grids.jade
@@ -1,38 +1,36 @@
 h2#grids Grids: responsive and fluid
-.grid-container
-  .box.column-full: p column() = 100%
-.grid-container
-  .box.column-one-one: p column(1, 1) = 100%
-.grid-container
-  .box.column-one-half: p column(1, 2) = 50%
-  .box.column-one-half: p column(1, 2) = 50%
-.grid-container
-  .box.column-one-third: p column(1, 3) = 33.33%
-  .box.column-one-third: p column(1, 3) = 33.33%
-  .box.column-one-third: p column(1, 3) = 33.33%
-.grid-container
-  .box.column-one-third: p column(1, 3) = 33.33%
-  .box.column-two-thirds: p column(2, 3) = 66.66%
-.grid-container
-  .box.column-one-quarter: p column(1, 4) = 25%
-  .box.column-one-quarter: p column(1, 4) = 25%
-  .box.column-one-quarter: p column(1, 4) = 25%
-  .box.column-one-quarter: p column(1, 4) = 25%
-.grid-container
-  .box.column-one-eighth: p column(1, 8) = 12.5%
-  .box.column-one-eighth: p column(1, 8) = 12.5%
-  .box.column-one-eighth: p column(1, 8) = 12.5%
-  .box.column-one-eighth: p column(1, 8) = 12.5%
-  .box.column-one-eighth: p column(1, 8) = 12.5%
-  .box.column-one-eighth: p column(1, 8) = 12.5%
-  .box.column-one-eighth: p column(1, 8) = 12.5%
-  .box.column-one-eighth: p column(1, 8) = 12.5%
-.grid-container
-  .box.column-one-third: p column(1, 3) = 33.33%
-  .box.column-one-third: p column(1, 3) = 33.33%
-  .box.column-one-third: p column(1, 3) = 33.33%
-  .box.column-one-third: p column(1, 3) = 33.33%
-  .box.column-two-thirds: p column(2, 3) = 66.66%
-  .box.column-one-half: p column(2, 4) = 50%
-  .box.column-one-quarter: p column(1, 4) = 25%
-  .box.column-one-quarter: p column(1, 4) = 25%
+.demo
+  .grid-container
+    .column-full: p column() = 100%
+.demo
+  .grid-container
+    .column-one-one: p column(1, 1) = 100%
+.demo
+  .grid-container
+    .column-one-half: p column(1, 2) = 50%
+    .column-one-half: p column(1, 2) = 50%
+.demo
+  .grid-container
+    .column-one-third: p column(1, 3) = 33.33%
+    .column-one-third: p column(1, 3) = 33.33%
+    .column-one-third: p column(1, 3) = 33.33%
+.demo
+  .grid-container
+    .column-one-third: p column(1, 3) = 33.33%
+    .column-two-thirds: p column(2, 3) = 66.66%
+.demo
+  .grid-container
+    .column-one-quarter: p column(1, 4) = 25%
+    .column-one-quarter: p column(1, 4) = 25%
+    .column-one-quarter: p column(1, 4) = 25%
+    .column-one-quarter: p column(1, 4) = 25%
+.demo
+  .grid-container
+    .column-one-eighth: p column(1, 8) = 12.5%
+    .column-one-eighth: p column(1, 8) = 12.5%
+    .column-one-eighth: p column(1, 8) = 12.5%
+    .column-one-eighth: p column(1, 8) = 12.5%
+    .column-one-eighth: p column(1, 8) = 12.5%
+    .column-one-eighth: p column(1, 8) = 12.5%
+    .column-one-eighth: p column(1, 8) = 12.5%
+    .column-one-eighth: p column(1, 8) = 12.5%
