--- a/test/css/app.styl
+++ b/test/css/app.styl
@@ -54,7 +54,7 @@ ul.comma-list
   comma-list()
 
 ul.serial-comma-list
-  comma-list(true)
+  comma-list(serial: true)
 
 .cursive
   font-family cursive-font-stack
