Clean up syntax

--- a/lib/yetzirah/base.styl
+++ b/lib/yetzirah/base.styl
@@ -4,9 +4,9 @@
 html
 
   // Medium screens (640px)
-  @media (min-width: 40rem)
+  @media (min-width 40rem)
     font-size 112%
 
   // Large screens (1024px +)
-  @media (min-width: 64rem)
+  @media (min-width 64rem)
     font-size 120%
