--- a/lib/yetzirah/grid.styl
+++ b/lib/yetzirah/grid.styl
@@ -10,7 +10,7 @@ container()
 column(numerator = 1, denominator = 1)
   margin-bottom gutter
 
-  @media (min-width: 40rem)
+  @media (min-width 40rem)
     float left
     margin 0
     width (round((numerator / denominator * 100), 2))%
