--- a/lib/yetzirah/reset.styl
+++ b/lib/yetzirah/reset.styl
@@ -125,7 +125,7 @@ q
 
 blockquote
   border-left 5px solid #ccc
-  padding-left 1em
+  padding-left 1rem
   & > cite:before
   footer:before
     content '— '
@@ -204,14 +204,14 @@ sup
   vertical-align baseline
 
 sup
-  top -0.5em
+  top -0.5rem
 
 sub
-  bottom -0.25em
+  bottom -0.25rem
 
 code
 kbd
 pre
 samp
   font-family monospace
-  font-size 1em
+  font-size 1rem
