--- a/lib/yetzirah/base.styl
+++ b/lib/yetzirah/base.styl
@@ -1,12 +1,12 @@
 @import config
 
-// Small screens (default)
+// Small screens by default, á la responsive Web design
 html
 
-  // Medium screens (640px)
+  // Medium screens (~640px)
   @media (min-width 40rem)
     font-size 112%
 
-  // Large screens (1024px +)
+  // Large screens (~1024px +)
   @media (min-width 64rem)
     font-size 120%
