Remove Gulp build steps in favour of simple npm scripts

--- a/demo/index.jade
+++ b/demo/index.jade
@@ -5,7 +5,7 @@ html
       content='width=device-width, initial-scale=1'
     )
     title Yetzirah CSS Foundation Library
-    link(rel='stylesheet' media='screen' href='css/app.css')
+    link(rel='stylesheet' media='screen' href='./main.css')
   body
     header
       h1: a(href='./index.html') Yetzirah CSS Foundation Library
